#
# Copyright (c) 2016 Hirochika Asai <asai@jar.jp>
# All rights reserved.
#

noinst_HEADERS = 

bin_PROGRAMS = reactping
#lib_LTLIBRARIES = libreactmt.la
#libreactmt_la_SOURCES = 

reactping_SOURCES = reactping.c
#reactping_LDADD = .la
#reactping_DEPENDENCIES = .la

CLEANFILES = *~

test: all
	@echo "Test to be implemented..."
#	$(top_builddir)/test
